typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            73,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts:9:5
  |
9 | var a: A1;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            83,
        ),
        hi: BytePos(
            84,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts:10:5
   |
10 | var b: B1;
   |     ^

